--- a/src/resource/css/hexagons.css
+++ b/src/resource/css/hexagons.css
@@ -27,17 +27,17 @@
 .inCard {
   padding: 2px 16px;
 }
-.hex {
+ .hex {
   position: relative;
   visibility: hidden;
   outline: 1px solid transparent; /* fix for jagged edges in FF on hover transition */
-}
-.hex::after {
+} 
+ .hex::after {
   content: '';
   display: block;
   padding-bottom: 86.602%; /* =  100 / tan(60) * 1.5 */
-}
-.hexIn {
+} 
+ .hexIn {
   position: absolute;
   width: 96%;
   padding-bottom: 110.851%; /* =  width / sin(60) */
@@ -48,7 +48,7 @@
   -webkit-transform: rotate3d(0, 0, 1, -60deg) skewY(30deg);
   -ms-transform: rotate3d(0, 0, 1, -60deg) skewY(30deg);
   transform: rotate3d(0, 0, 1, -60deg) skewY(30deg);
-}
+} 
 .hexIn * {
   position: absolute;
   visibility: visible;
@@ -56,11 +56,11 @@
   background-color: rgb(122, 0, 153);
 }
 .hexLink {
-  display: block;
+  display: blgk;
   width: 100%;
   height: 100%;
   text-align: center;
-  color: #fff; 
+  color: #fff;
   overflow: hidden;
   -webkit-transform: skewY(-30deg) rotate3d(0, 0, 1, 60deg);
   -ms-transform: skewY(-30deg) rotate3d(0, 0, 1, 60deg);
@@ -78,11 +78,13 @@
   -ms-transform: rotate3d(0, 0, 0, 0deg);
   transform: rotate3d(0, 0, 0, 0deg);
 }
-
+.hex span {
+  text-align: center;
+}
 .hex h1,
 .hex p {
   width: 100%;
-  padding: 5%;
+  padding: 8%;
   box-sizing: border-box;
   background-color: rgb(204, 245, 255);
   font-weight: 300;
@@ -116,14 +118,14 @@
 }
 
 /*** HOVER EFFECT  **********************************************************************/
- .hexLink:hover h1,
+.hexLink:hover h1,
 .hexLink:focus h1,
 .hexLink:hover p,
 .hexLink:focus p {
   -webkit-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-} 
+}
 
 /*** HEXAGON SIZING AND EVEN ROW INDENTATION *****************************************************************/
 @media (min-width: 1981px) {
