--- a/src/resource/css/style.css
+++ b/src/resource/css/style.css
@@ -6,7 +6,6 @@
 */
 
 /* CSS Document */
-
 /* Float Elements 
 ---------------------------------*/
 .fl-lt {
@@ -228,8 +227,9 @@ p {
 
 /* Services
 ---------------------------------*/
-#service , #service-body {
-  box-shadow: 0 0 30px black
+#service,
+#service-body {
+  box-shadow: 0 0 30px black;
 }
 .service-list {
   padding: 0 0 0 0;
@@ -643,49 +643,6 @@ img {
   display: block;
   overflow: hidden;
 }
-.social-link {
-  padding: 35px 0;
-  margin: 0 0 0 68px;
-  display: block;
-  overflow: hidden;
-  list-style: none;
-}
-.social-link li {
-  float: left;
-  margin-right: 8px;
-}
-.social-link li a {
-  display: block;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  font-size: 25px;
-  color: #fff;
-  background: #222222;
-  border-radius: 50%;
-  transition: all 0.3s ease-in-out;
-}
-.social-link li a:hover,
-.social-link li a:focus {
-  text-decoration: none;
-}
-.twitter a:hover {
-  background: #55acee;
-}
-.facebook a:hover {
-  background: #3b5998;
-}
-.pinterest a:hover {
-  background: #cb2026;
-}
-.gplus a:hover {
-  background: #dd4b39;
-}
-.dribbble a:hover {
-  background: #ea4c89;
-}
-
 .form {
   margin: 0 66px 0 30px;
 }
@@ -832,5 +789,3 @@ img {
 .portfolioContainer {
   max-width: 1140px;
 }
-
-
