mock data in display page

--- a/src/resource/css/style.css
+++ b/src/resource/css/style.css
@@ -14,6 +14,9 @@
 .fl-rt {
   float: right;
 }
+.root {
+  background: gray
+}
 /* Clear Floated Elements
 ---------------------------------*/
 .clear {
