--- a/src/resource/css/hexagons.css
+++ b/src/resource/css/hexagons.css
@@ -83,6 +83,7 @@
 }
 .hex h1,
 .hex p {
+  margin: 0;
   width: 100%;
   padding: 8%;
   box-sizing: border-box;
@@ -92,6 +93,7 @@
   transition: transform .2s ease-out, opacity .3s ease-out;
 }
 .hex h1 {
+  margin: 0;
   bottom: 50%;
   padding-top: 50%;
   font-size: 1.5em;
@@ -110,7 +112,7 @@
   border-bottom: 1px solid #fff;
 }
 .hex p {
-  top: 45%;
+  top: 50%;
   padding-bottom: 50%;
   -webkit-transform: translate3d(0, 100%, 0);
   -ms-transform: translate3d(0, 100%, 0);
